Update StartOffsetReducer